tests/super/super.exp
Error ----------------------------------------------------- constructor.js:15:10

Cannot get `this.y` because property `y` is missing in uninitialized this
(expected super constructor call).

Error: constructor.js:15
 15:     this.y; // error (no super call)
              ^ Cannot get `this.y` because property `y` is missing in uninitialized this (expected super constructor call) [1].
  References:
   12: class D extends A {
             ^ [1]: uninitialized this (expected super constructor call)

Error ----------------------------------------------------- constructor.js:16:10

Cannot get `this.x` because property `x` is missing in uninitialized this
(expected super constructor call).

Error: constructor.js:16
 16:     this.x; // error (no super call)
              ^ Cannot get `this.x` because property `x` is missing in uninitialized this (expected super constructor call) [1].
  References:
   12: class D extends A {
             ^ [1]: uninitialized this (expected super constructor call)

Error ------------------------------------------------------ constructor.js:30:5

Cannot get `f.y` because property `y` is missing in uninitialized this (expected
super constructor call).

Error: constructor.js:30
 30:   f.y; // error
         ^ Cannot get `f.y` because property `y` is missing in uninitialized this (expected super constructor call) [1].
  References:
   33: class F extends A {
             ^ [1]: uninitialized this (expected super constructor call)

Error ------------------------------------------------------ constructor.js:31:5

Cannot get `f.x` because property `x` is missing in uninitialized this (expected
super constructor call).

Error: constructor.js:31
 31:   f.x; // error
         ^ Cannot get `f.x` because property `x` is missing in uninitialized this (expected super constructor call) [1].
  References:
   33: class F extends A {
             ^ [1]: uninitialized this (expected super constructor call)

Error ----------------------------------------------------- constructor.js:45:11

Cannot get `super.x` because property `x` is missing in uninitialized this
(expected super constructor call).

Error: constructor.js:45
 45:     super.x; // error (no super call)
               ^ Cannot get `super.x` because property `x` is missing in uninitialized this (expected super constructor call) [1].
  References:
   43: class G extends A {
             ^ [1]: uninitialized this (expected super constructor call)

Error ----------------------------------------------------- constructor.js:63:17

Cannot call `leaked_this.foo` because property `foo` is missing in uninitialized
this (expected super constructor call).

Error: constructor.js:63
 63:     leaked_this.foo()
                     ^^^ Cannot call `leaked_this.foo` because property `foo` is missing in uninitialized this (expected super constructor call) [1].
  References:
   67: class I extends I_ {
             ^ [1]: uninitialized this (expected super constructor call)

Error ----------------------------------------------------- constructor.js:83:22

Cannot call `this.foo` because property `foo` is missing in uninitialized this
(expected super constructor call).

Error: constructor.js:83
 83:     super(() => this.foo()); // error (no super call yet)
                          ^^^ Cannot call `this.foo` because property `foo` is missing in uninitialized this (expected super constructor call) [1].
  References:
   81: class J extends J_ {
             ^ [1]: uninitialized this (expected super constructor call)

Error ----------------------------------------------------------- super.js:10:11

Cannot call `super` with `x` bound to `x` because string is incompatible with
number.

Error: super.js:10
 10:     super(x);
               ^ Cannot call `super` with `x` bound to `x` because string [1] is incompatible with number [2].
  References:
    9:   constructor(x:string,y:number) {
                       ^^^^^^ [1]: string
    3:   constructor(x:number) { }
                       ^^^^^^ [2]: number

Error ------------------------------------------------------------ super.js:14:6

Cannot cast `super.staticMethod(...)` to number because string is incompatible
with number.

Error: super.js:14
 14:     (super.staticMethod('foo'): number); // error, string !~> number
          ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `super.staticMethod(...)` to number because string [1] is incompatible with number [2].
  References:
    4:   static staticMethod(x:string): string { return x; }
                                        ^^^^^^ [1]: string
   14:     (super.staticMethod('foo'): number); // error, string !~> number
                                       ^^^^^^ [2]: number

Error ----------------------------------------------------------- super.js:15:12

Cannot call `super.doesntExist` because property `doesntExist` is missing in
statics of `A`.

Error: super.js:15
 15:     (super.doesntExist()); // error, A doesn't have a doesntExist method
                ^^^^^^^^^^^ Cannot call `super.doesntExist` because property `doesntExist` is missing in statics of `A` [1].
  References:
    2: class A {
             ^ [1]: statics of `A`

Error ----------------------------------------------------------- super.js:19:13

Cannot call `super.f` with `0` bound to `x` because number is incompatible with
string.

Error: super.js:19
 19:     super.f(0);
                 ^ Cannot call `super.f` with `0` bound to `x` because number [1] is incompatible with string [2].
  References:
   19:     super.f(0);
                   ^ [1]: number
    5:   f(x:string) { }
             ^^^^^^ [2]: string

Error ----------------------------------------------------------- super.js:20:18

Cannot get `super.g` because property `g` is missing in `A`.

Error: super.js:20
 20:     return super.g;
                      ^ Cannot get `super.g` because property `g` is missing in `A` [1].
  References:
    2: class A {
             ^ [1]: `A`


Found 12 errors
